make CSVEventSource work improved SPOT logging some refactoring