@@ -1,13 +1,12 @@
 package com.example.binanceparser;
 
-import static com.example.binanceparser.Constants.*;
 import com.example.binanceparser.config.BalanceVisualizerConfig;
+import com.example.binanceparser.datasource.CSVEventSource;
 import com.example.binanceparser.datasource.LogsEventSource;
 import com.example.binanceparser.datasource.filters.EventTypeFilter;
 import com.example.binanceparser.datasource.filters.Filter;
 import com.example.binanceparser.datasource.filters.SourceFilter;
 import com.example.binanceparser.processor.FuturesBalanceStateProcessor;
-import com.example.binanceparser.processor.SpotBalanceProcessor;
 import com.example.binanceparser.processor.TestSpotBalanceProcessor;
 import com.example.binanceparser.report.BalanceReport;
 
@@ -17,76 +16,84 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 
+import static com.example.binanceparser.Constants.USD;
+import static com.example.binanceparser.Constants.VIRTUAL_USD;
+
 public class BalanceStateVisualizer {
-	public static final DateTimeFormatter dateFormat = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+    public static final DateTimeFormatter dateFormat = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
 
-	public static void main(String[] args) throws IOException {
-		BalanceStateVisualizer app = new BalanceStateVisualizer();
-		final String person = "Kozhukhar";
-		app.futuresStateChangeFromLogs(person);
-		app.spotStateChangeFromLogs(person);
-	}
+    public static void main(String[] args) throws IOException {
+        BalanceStateVisualizer app = new BalanceStateVisualizer();
+        final String person = "nefedov";
+        app.futuresStateChangeFromLogs(person);
+//		app.spotStateChangeFromLogs(person);
+    }
 
-	public void futuresStateChangeFromLogs(String person) throws IOException {
-		final BalanceVisualizerConfig config = configure();
-		addSubject(config, person, "FUTURES_PRODUCER");
+    public void futuresStateChangeFromLogs(String person) throws IOException {
+        final BalanceVisualizerConfig config = configure();
+        config.setSubject(List.of(person));
+        config.setAssetsToTrack(List.of(USD));
+//        addSubject(config, person, "FUTURES_PRODUCER");
 
-		final File logsDir = new File(config.getInputFilepath());
-		final LogsEventSource logsEventSource = new LogsEventSource(logsDir, filters(config));
-		FuturesBalanceStateProcessor processor = new FuturesBalanceStateProcessor(logsEventSource, config);
-		final BalanceReport report = processor.process();
-		System.out.println("Report....");
-		System.out.println(report.toPrettyString());
-	}
+        final File logsDir = new File(config.getInputFilepath());
+        final CSVEventSource logsEventSource = new CSVEventSource(logsDir, person);
+        FuturesBalanceStateProcessor processor = new FuturesBalanceStateProcessor(logsEventSource, config);
+        final BalanceReport report = processor.process();
+        System.out.println("Report....");
+        System.out.println(report.toPrettyString());
+    }
 
-	public void spotStateChangeFromLogs(String person) throws IOException {
-		final BalanceVisualizerConfig config = configure();
-		addSubject(config, person, "SPOT_PRODUCER");
+    public void spotStateChangeFromLogs(String person) throws IOException {
+        final BalanceVisualizerConfig config = configure();
+        config.setSubject(List.of(person));
+        config.setAssetsToTrack(List.of(VIRTUAL_USD));
 
-		final File logsDir = new File(config.getInputFilepath());
-		final LogsEventSource logsEventSource = new LogsEventSource(logsDir, filters(config));
+//        addSubject(config, person, "SPOT_PRODUCER");
+
+        final File logsDir = new File(config.getInputFilepath());
+        final CSVEventSource logsEventSource = new CSVEventSource(logsDir, person);
 //		SpotBalanceProcessor processor = new SpotBalanceProcessor(logsEventSource, config);
-		TestSpotBalanceProcessor testProcessor = new TestSpotBalanceProcessor(logsEventSource, config);
+        TestSpotBalanceProcessor testProcessor = new TestSpotBalanceProcessor(logsEventSource, config);
 //		final BalanceReport report = processor.process();
-		final BalanceReport testReport = testProcessor.process();
+        final BalanceReport testReport = testProcessor.process();
 //		System.out.println("Report....");
 //		System.out.println(report.toPrettyString());
-		System.out.println("Test report....");
-		System.out.println(testReport.toPrettyString());
-	}
+        System.out.println("Test report....");
+        System.out.println(testReport.toPrettyString());
+    }
 
-	private static BalanceVisualizerConfig configure() {
-		final BalanceVisualizerConfig config = new BalanceVisualizerConfig();
-		LocalDateTime start = LocalDateTime.parse("2021-08-16 00:00:00", dateFormat);
-		LocalDateTime finish = LocalDateTime.parse("2021-12-30 00:00:00", dateFormat);
-		config.setStartTrackDate(start);
-		config.setFinishTrackDate(finish);
-		config.setInputFilepath("C:/Users/Sanya/Desktop/ParserOutput/logs");
-		config.setOutputDir("C:/Users/Sanya/Desktop/ParserOutput");
-		//config.setAssetsToTrack(List.of(USDT, BUSD, BTC, ETH, AXS));
-		config.setAssetsToTrack(Collections.emptyList());
-		config.setConvertToUSD(false);
-		return config;
-	}
+    private static BalanceVisualizerConfig configure() {
+        final BalanceVisualizerConfig config = new BalanceVisualizerConfig();
+        LocalDateTime start = LocalDateTime.parse("2021-08-16 00:00:00", dateFormat);
+        LocalDateTime finish = LocalDateTime.parse("2021-12-30 00:00:00", dateFormat);
+        config.setStartTrackDate(start);
+        config.setFinishTrackDate(finish);
+        config.setInputFilepath("/Users/roman/Desktop/trader_events.csv");
+        config.setOutputDir("/Users/roman/Desktop/");
+        //config.setAssetsToTrack(List.of(USDT, BUSD, BTC, ETH, AXS));
+        config.setAssetsToTrack(Collections.emptyList());
+        config.setConvertToUSD(false);
+        return config;
+    }
 
-	private static void addSubject(BalanceVisualizerConfig config, String subject, String prefix) {
-		final String resolvedSubjectName = prefix + "_" + subject;
-		final List<String> list = config.getSubject();
-		if (list == null) {
-			config.setSubject(new ArrayList<>());
-		}
-		config.getSubject().add(resolvedSubjectName);
-	}
+    private static void addSubject(BalanceVisualizerConfig config, String subject, String prefix) {
+        final String resolvedSubjectName = prefix + "_" + subject;
+        final List<String> list = config.getSubject();
+        if (list == null) {
+            config.setSubject(new ArrayList<>());
+        }
+        config.getSubject().add(resolvedSubjectName);
+    }
 
-	private static Set<Filter> filters(BalanceVisualizerConfig config) {
-		final Set<Filter> filters = new HashSet<>();
-		if (config.getSubject() != null) {
-			filters.add(new SourceFilter(config.getSubject()));
-		}
+    private static Set<Filter> filters(BalanceVisualizerConfig config) {
+        final Set<Filter> filters = new HashSet<>();
+        if (config.getSubject() != null) {
+            filters.add(new SourceFilter(config.getSubject()));
+        }
 
-		if (config.getEventType() != null) {
-			filters.add(new EventTypeFilter(config.getEventType()));
-		}
-		return filters;
-	}
+        if (config.getEventType() != null) {
+            filters.add(new EventTypeFilter(config.getEventType()));
+        }
+        return filters;
+    }
 }
